better welcome screen

--- a/front/src/css/Welcome.css
+++ b/front/src/css/Welcome.css
@@ -1,2 +1,15 @@
 .welcome-container {
+  display: flex;
+  align-items: center;
+  flex-flow: column;
+  justify-content: center;
+  height: 100vh;
+}
+
+.madeby {
+  margin-top: 10px;
+}
+
+.madeby-name {
+  margin: 0px 5px;
 }
